# 3DGraphicEngine

./: CMakeLists.txt  README.md
assets/: cat.mtl  fragment_shader.frag  vertex_shader.vert
include/: buffer_object.hpp  camera_ctrl.hpp  obj_loader.hpp  render_class.hpp  shader_loader.hpp  tools.hpp
src/: buffer_object.cpp  camera_ctrl.cpp  main.cpp  obj_loader.cpp  render_class.cpp  shader_loader.cpp  tools.cpp
